MDEV-36589 Garbage written into slow log for SET SESSION AUTHORIZATION command, assertion fails

don't reset query start time on change user.
do reset bytes_sent_old on change user